build-log.txt

> project-react@0.0.0 build
> vite build

file:///home/runner/work/Skill_Forge/Skill_Forge/node_modules/rolldown/dist/shared/rolldown-build-CtPvmZgJ.mjs:9
import { formatWithOptions, styleText } from "node:util";
                            ^^^^^^^^^
SyntaxError: The requested module 'node:util' does not provide an export named 'styleText'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)

Node.js v18.20.8
